Fixes squashed close buttons

--- a/styles.css
+++ b/styles.css
@@ -78,7 +78,7 @@ body {
 	margin-bottom: 0.75em;
 }
 
-.btn {
+.btn.main {
 
 	width: 20%;
 	margin-right: 0.5em;
